fix shareit linkedin origin

--- a/apps/frontend/src/pages/post/[slug].astro
+++ b/apps/frontend/src/pages/post/[slug].astro
@@ -38,6 +38,7 @@ const post = await getPost(slug);
           url={`${config.site.base_url}/post/${slug}`}
           title={post.title}
           description={post.subtitle}
+          origin={config.site.base_url}
         />
       </div>
     </article>
