--- a/packages/licid/src/blocks/hero/BlogPost.astro
+++ b/packages/licid/src/blocks/hero/BlogPost.astro
@@ -3,6 +3,17 @@
 ---
 
 <header class="mb-12 pt-12 text-center">
-  <h1 class="display-small">Blog posts</h1>
+  <h1 class="display-small">
+    The
+    <strong class="text-primary dark:text-dark-primary"
+      ><a
+        href="/"
+        label="Index"
+        class="hover:border-b-primary dark:hover:border-b-dark-primary hover:border-b"
+        >Drowr</a
+      ></strong
+    >
+    Blog posts
+  </h1>
   <p class="body-small mx-auto mt-6 max-w-125">Notes, howto here...</p>
 </header>
