--- a/apps/frontend/src/blocks/home/LastTheme.astro
+++ b/apps/frontend/src/blocks/home/LastTheme.astro
@@ -28,7 +28,7 @@ const allPosts = data.publication.posts.edges;
     </>
   </p>
 
-  <div class="col-span-8 grid h-142 grid-rows-1">
+  <div class="col-span-8 grid h-80 grid-rows-1 md:h-128">
     <a href={`/post/${allPosts[0].node.slug}`}>
       <Image
         src={allPosts[0].node.coverImage.url}
