add page on tag

--- a/apps/frontend/src/blocks/home/LastTheme.astro
+++ b/apps/frontend/src/blocks/home/LastTheme.astro
@@ -14,7 +14,7 @@ const allPosts = data.publication.posts.edges;
   <h2 class="headline-large mx-auto mb-4 max-w-4xl text-center text-pretty">
     Last <strong class="text-primary dark:text-dark-primary"
       ><a
-        href="/themes"
+        href="/posts/themes"
         label="Explore all themes"
         class="hover:border-b-primary dark:hover:border-b-dark-primary hover:border-b"
         >desktops</a
