--- a/apps/frontend/src/components/TagNavigation.astro
+++ b/apps/frontend/src/components/TagNavigation.astro
@@ -7,18 +7,6 @@ const allPosts = data.publication.posts.edges;
 
 const tags = [...new Set(allPosts.flatMap((post) => post.node.tags))];
 
-// need to add
-function filterTags(item) {
-  const hasTheme = item.name.includes("themes");
-  const swayfx = item.name.includes("swayfx");
-  if (hasTheme || swayfx) {
-    return false;
-  }
-  return true;
-}
-
-const tagsFiltered = tags.filter(filterTags);
-
 const currentPath = new URL(Astro.request.url).pathname;
 const pathSegments = currentPath
   .split("/")
@@ -39,10 +27,10 @@ const atest = (word) => {
     isfocus={atest("posts") ? true : false}
   />
   {
-    tagsFiltered.map((t) => (
+    tags.map((t) => (
       <ChipsFilter
         name={t.name}
-        slug={`/posts/tag/${t.slug}`}
+        slug={`/posts/${t.slug}`}
         isfocus={atest(t.slug) ? true : false}
       />
     ))
