--- a/packages/licid/src/components/chips/Suggestion.astro
+++ b/packages/licid/src/components/chips/Suggestion.astro
@@ -12,5 +12,5 @@ const { name, slug } = Astro.props;
 <div
   class="bg-outlineVariant dark:bg-dark-outlineVariant label-large text-onSurfaceVariant dark:text-dark-onSurfaceVariant hover:bg-primary/20 dark:hover:bg-dark-primary/20 h-8 w-fit rounded-lg px-4"
 >
-  <a href={`/tag/${slug}`}>{name}</a>
+  <a href={`/posts/${slug}`}>{name}</a>
 </div>
