--- a/apps/frontend/src/components/TagNavigation.astro
+++ b/apps/frontend/src/components/TagNavigation.astro
@@ -20,7 +20,7 @@ const atest = (word) => {
 };
 ---
 
-<div class="mb-6 flex flex-row flex-wrap items-center justify-start gap-2">
+<div class="mb-12 flex flex-row flex-wrap justify-center gap-2">
   <ChipsFilter
     name="all"
     slug="/posts"
