--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -2,6 +2,7 @@
 import { HeroHome } from "@drowr/licid";
 import RecentsPosts from "@/blocks/home/RecentsPosts.astro";
 import LastTheme from "@/blocks/home/LastTheme.astro";
+import Skills from "@/blocks/home/Skills.astro";
 import Layout from "@/layouts/Layout.astro";
 import config from "@/config/config.json";
 ---
@@ -9,6 +10,7 @@ import config from "@/config/config.json";
 <Layout>
   <div class="container">
     <HeroHome author={config.site.author} />
+    <Skills />
     <LastTheme />
     <RecentsPosts />
   </div>
