--- a/packages/licid/src/components/chips/Suggestion.astro
+++ b/packages/licid/src/components/chips/Suggestion.astro
@@ -10,7 +10,11 @@ const { name, slug } = Astro.props;
 ---
 
 <div
-  class="bg-outlineVariant dark:bg-dark-outlineVariant label-large text-onSurfaceVariant dark:text-dark-onSurfaceVariant hover:bg-primary/20 dark:hover:bg-dark-primary/20 h-8 w-fit rounded-lg px-4"
+  class="bg-surfaceContainerLow dark:bg-dark-surfaceContainerLow label-large text-onSurfaceVariant dark:text-dark-onSurfaceVariant border-outlineVariant dark:border-dark-outlineVariant h-8 w-fit rounded-lg border"
 >
-  <a href={`/posts/${slug}`}>{name}</a>
+  <div
+    class="hover:bg-primary/10 dark:hover:bg-dark-primary/10 rounded-lg px-4"
+  >
+    <a href={`/posts/${slug}`}>{name}</a>
+  </div>
 </div>
