--- a/packages/licid/src/blocks/markdown/code.astro
+++ b/packages/licid/src/blocks/markdown/code.astro
@@ -15,11 +15,12 @@ import "../../styles.css";
       @apply font-brand text-[22pt] leading-[28pt] font-normal tracking-[0] not-italic font-stretch-normal;
     }
     pre.astro-code {
-      @apply my-6 rounded-lg p-2;
+      @apply my-6 rounded-lg p-1 text-pretty;
       @apply font-plain text-[12pt] leading-[16pt] font-normal tracking-[0.1pt] not-italic font-stretch-normal;
     }
     p {
       @apply font-plain text-[14pt] leading-[20pt] font-normal tracking-[0] not-italic font-stretch-normal;
+      @apply py-2;
     }
   }
 </style>
