--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -3,6 +3,7 @@ import { HeroHome } from "@drowr/licid";
 import RecentsPosts from "@/blocks/home/RecentsPosts.astro";
 import LastTheme from "@/blocks/home/LastTheme.astro";
 import Skills from "@/blocks/home/Skills.astro";
+import NewsLetter from "@/blocks/home/NewsLetter.astro";
 import Layout from "@/layouts/Layout.astro";
 import config from "@/config/config.json";
 ---
@@ -13,5 +14,6 @@ import config from "@/config/config.json";
     <Skills />
     <LastTheme />
     <RecentsPosts />
+    <NewsLetter />
   </div>
 </Layout>
