--- a/apps/frontend/src/pages/post/[slug].astro
+++ b/apps/frontend/src/pages/post/[slug].astro
@@ -6,6 +6,7 @@ import { HeroPost, MarkdownCode, ShareIt } from "@drowr/licid";
 import { Markdown } from "@astropub/md";
 import { Image } from "astro:assets";
 import config from "@/config/config.json";
+import Giscus from "@/blocks/Giscus.astro";
 
 function isATheme(item) {
   const hasTheme = item.tags.map((tag) => tag.name).includes("themes");
@@ -72,5 +73,8 @@ const post = await getPost(slug);
         />
       </div>
     </article>
+    <div class="container py-8">
+      <Giscus />
+    </div>
   </LayoutPost>
 </Layout>
