--- a/packages/licid/src/styles.css
+++ b/packages/licid/src/styles.css
@@ -39,6 +39,7 @@
 }
 
 @layer base {
+  @import "./styles/giscus.css";
   body {
     @apply bg-surface text-onSurface dark:bg-dark-surface dark:text-dark-onSurface;
   }
