little css improvment

--- a/packages/licid/src/Card/Outlined.astro
+++ b/packages/licid/src/Card/Outlined.astro
@@ -34,7 +34,9 @@ const formattedDate = new Intl.DateTimeFormat("en-US", options).format(
   class="card-outlined bg-surface text-primary border-outline hover:border-outlineVariant dark:bg-dark-surface dark:text-dark-primary dark:border-dark-outline dark:hover:border-dark-outlineVariant rounded-xl border"
 >
   <a href={`/post/${slug}`} aria-label={`See post ${title}`}>
-    <div class="hover:bg-onSurface/10 dark:hover:bg-dark-onSurface/10 h-full">
+    <div
+      class="hover:bg-onSurface/8 dark:hover:bg-dark-onSurface/8 h-full rounded-xl"
+    >
       <div class="card-outined p-4">
         <div
           class="label-small text-onSurfaceVariant dark:text-dark-onSurfaceVariant mb-2 inline-block w-full"
