--- a/packages/licid/src/components/chips/Suggestion.astro
+++ b/packages/licid/src/components/chips/Suggestion.astro
@@ -13,7 +13,7 @@ const { name, slug } = Astro.props;
   class="bg-surfaceContainerLow dark:bg-dark-surfaceContainerLow label-large text-onSurfaceVariant dark:text-dark-onSurfaceVariant border-outlineVariant dark:border-dark-outlineVariant h-8 w-fit rounded-lg border"
 >
   <div
-    class="hover:bg-primary/10 dark:hover:bg-dark-primary/10 rounded-lg px-4"
+    class="hover:bg-primary/8 dark:hover:bg-dark-primary/8 h-full rounded-lg px-4"
   >
     <a href={`/posts/${slug}`}>{name}</a>
   </div>
