--- a/packages/licid/src/styles/giscus.css
+++ b/packages/licid/src/styles/giscus.css
@@ -48,8 +48,8 @@ main {
   --color-btn-active-bg: #3d444d;
   --color-btn-active-border: #636e7b;
   --color-btn-selected-bg: #2d333b;
-  --color-btn-primary-text: #fff;
-  --color-btn-primary-bg: #347d39;
+  --color-btn-primary-text: var(--color-onPrimary);
+  --color-btn-primary-bg: var(--color-primary);
   --color-btn-primary-border: #cdd9e51a;
   --color-btn-primary-shadow: 0 0 #0000;
   --color-btn-primary-inset-shadow: 0 0 #0000;
@@ -64,14 +64,14 @@ main {
   --color-segmented-control-bg: #636e7b1a;
   --color-segmented-control-button-bg: #22272e;
   --color-segmented-control-button-selected-border: #636e7b;
-  --color-fg-default: #adbac7;
+  --color-fg-default: var(--color-onSurface);
   --color-fg-muted: #768390;
-  --color-fg-subtle: #545d68;
-  --color-canvas-default: #192734;
+  --color-fg-subtle: var(--color-onSurfaceVariant);
+  --color-canvas-default: var(--color-surfaceContainerLow);
   --color-canvas-overlay: #161b22;
   --color-canvas-inset: var(--color-surface);
   --color-canvas-subtle: var(--color-surface);
-  --color-border-default: #444c56;
+  --color-border-default: var(--color-outline);
   --color-border-muted: #373e47;
   --color-neutral-muted: #636e7b66;
   --color-accent-fg: #539bf5;
@@ -96,8 +96,14 @@ main {
 /*! Dark mode */
 @media (prefers-color-scheme: dark) {
   main {
+    --color-btn-primary-text: var(--color-dark-onPrimary);
+    --color-btn-primary-bg: var(--color-dark-primary);
+    --color-fg-default: var(--color-dark-onSurface);
+    --color-fg-subtle: var(--color-dark-onSurfaceVariant);
+    --color-canvas-default: var(--color-dark-surfaceContainerLow);
     --color-canvas-inset: var(--color-dark-surface);
     --color-canvas-subtle: var(--color-dark-surface);
+    --color-border-default: var(--color-dark-outline);
   }
 }
 
