--- a/apps/frontend/src/pages/posts/[tag].astro
+++ b/apps/frontend/src/pages/posts/[tag].astro
@@ -35,7 +35,7 @@ const { posts, matchedTag } = Astro.props;
 ---
 
 <Layout>
-  <div class="container">
+  <div class="container pb-16">
     <HeroBlogPost />
     <TagNavigation />
     <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
