--- a/packages/licid/src/components/Social.astro
+++ b/packages/licid/src/components/Social.astro
@@ -5,7 +5,7 @@ import MastodonIcon from "../assets/icons/mastodon.svg";
 import ProtonmailIcon from "../assets/icons/protonmail.svg";
 ---
 
-<div class="relative top-2 mt-6 justify-self-center md:top-4">
+<div class="relative top-2 mt-6 mb-12 justify-self-center md:top-4">
   <div class="flex w-full items-center justify-center gap-6 py-2 md:py-6">
     <a
       href="https://github.com/szorfein"
