--- a/apps/frontend/src/layouts/Layout.astro
+++ b/apps/frontend/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import { join } from "node:path";
 import { AstroFont } from "astro-font";
 import "@drowr/licid/styles.css";
 import { ClientRouter } from "astro:transitions";
-import { Header } from "@drowr/licid";
+import { Header, Footer } from "@drowr/licid";
 import config from "@/config/config.json";
 
 interface Props {
@@ -127,5 +127,6 @@ console.log(Astro.site.toString());
     <main>
       <slot />
     </main>
+    <Footer />
   </body>
 </html>
