--- a/apps/frontend/src/pages/posts/index.astro
+++ b/apps/frontend/src/pages/posts/index.astro
@@ -19,7 +19,7 @@ const allPostsFiltered = allPosts.filter(filterPost);
 ---
 
 <Layout>
-  <div class="container">
+  <div class="container pb-16">
     <HeroBlogPost />
     <TagNavigation />
     <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
