--- a/apps/frontend/src/layouts/Layout.astro
+++ b/apps/frontend/src/layouts/Layout.astro
@@ -121,6 +121,7 @@ console.log(Astro.site.toString());
     }
 
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="fediverse:creator" content="@szorfein@mastodon.social" />
   </head>
   <body>
     <Header />
