--- a/packages/licid/src/blocks/Footer.astro
+++ b/packages/licid/src/blocks/Footer.astro
@@ -39,6 +39,7 @@ const socialLinks = [
                   <a
                     href={sl.link}
                     target="blank"
+                    rel="me"
                     aria-label={`link on ${sl.name}`}
                   >
                     {
