--- a/packages/licid/src/blocks/markdown/code.astro
+++ b/packages/licid/src/blocks/markdown/code.astro
@@ -25,5 +25,11 @@ import "../../styles.css";
     p a {
       @apply text-primary dark:text-dark-primary border-b-surface dark:border-b-dark-surface hover:border-b-primary dark:hover:border-b-dark-primary border-b border-solid;
     }
+    ul {
+      @apply py-2 pl-8;
+    }
+    ul > li {
+      @apply list-disc pl-1;
+    }
   }
 </style>
