--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import { HeroHome } from "@drowr/licid";
-import RecentsPosts from "@/blocks/home/RecentsPosts.astro";
 import LastTheme from "@/blocks/home/LastTheme.astro";
-import Skills from "@/blocks/home/Skills.astro";
-import NewsLetter from "@/blocks/home/NewsLetter.astro";
 import Layout from "@/layouts/Layout.astro";
+import NewsLetterHashnode from "@/blocks/home/NewsLetterHashnode.astro";
+import RecentsPosts from "@/blocks/home/RecentsPosts.astro";
+import Skills from "@/blocks/home/Skills.astro";
+import { HeroHome } from "@drowr/licid";
 import config from "@/config/config.json";
 ---
 
@@ -14,6 +14,6 @@ import config from "@/config/config.json";
     <Skills />
     <LastTheme />
     <RecentsPosts />
-    <NewsLetter />
+    <NewsLetterHashnode server:defer />
   </div>
 </Layout>
