giscus theme, tailwind with source

--- a/apps/frontend/src/blocks/Giscus.astro
+++ b/apps/frontend/src/blocks/Giscus.astro
@@ -7,6 +7,7 @@ const sitePrefix = import.meta.env.PROD
 ---
 
 <script
+  is:inline
   src="https://giscus.app/client.js"
   data-repo="szorfein/drowr"
   data-repo-id="R_kgDOQ5Eqfg"
