--- a/apps/frontend/src/layouts/Layout.astro
+++ b/apps/frontend/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { join } from "node:path";
+import '@/styles.css'
 import { AstroFont } from "astro-font";
-import "@drowr/licid/styles.css";
 import { ClientRouter } from "astro:transitions";
 import { Header, Footer } from "@drowr/licid";
 import config from "@/config/config.json";
