--- a/apps/frontend/src/pages/post/[slug].astro
+++ b/apps/frontend/src/pages/post/[slug].astro
@@ -74,7 +74,7 @@ const post = await getPost(slug);
       </div>
     </article>
     <div class="container py-8">
-      <Giscus />
+      <Giscus server:defer />
     </div>
   </LayoutPost>
 </Layout>
