--- a/apps/frontend/src/pages/posts/[tag].astro
+++ b/apps/frontend/src/pages/posts/[tag].astro
@@ -38,7 +38,7 @@ const { posts, matchedTag } = Astro.props;
   <div class="container pb-16">
     <HeroBlogPost />
     <TagNavigation />
-    <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3">
       {
         posts.map((post) => (
           <CardOutlined
