--- a/apps/frontend/src/pages/posts/index.astro
+++ b/apps/frontend/src/pages/posts/index.astro
@@ -22,7 +22,7 @@ const allPostsFiltered = allPosts.filter(filterPost);
   <div class="container pb-16">
     <HeroBlogPost />
     <TagNavigation />
-    <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3">
       {
         allPostsFiltered.map((post) => (
           <CardOutlined
