--- a/apps/frontend/src/blocks/home/NewsLetterHashnode.astro
+++ b/apps/frontend/src/blocks/home/NewsLetterHashnode.astro
@@ -1,5 +1,5 @@
 ---
-import { ButtonFilled } from "@drowr/licid";
+import { ButtonFilled, TextFieldFilled } from "@drowr/licid";
 ---
 
 <section class="pt-10 pb-16">
@@ -19,13 +19,11 @@ import { ButtonFilled } from "@drowr/licid";
       <div class="flex flex-col gap-4 sm:flex-row">
         <div class="grow content-center">
           <label for="email" class="sr-only">Email address</label>
-          <input
-            class="bg-surfaceContainerHighest dark:bg-dark-surfaceContainerHighest label-large text-onSurfaceVariant dark:text-dark-onSurfaceVariant relative flex w-full border-0 p-2"
-            name="email"
-            aria-label="Email Address"
-            placeholder="Email Address"
-            required
+          <TextFieldFilled
             type="email"
+            label="Email Address"
+            placeholder="Email Address"
+            name="email"
           />
         </div>
         <ButtonFilled text="Subscribe" type="submit" />
