--- a/packages/licid/src/Logo.astro
+++ b/packages/licid/src/Logo.astro
@@ -1,5 +1,4 @@
 ---
-import "./styles.css";
 import { Image } from "astro:assets";
 import logoSrc from "./assets/logoImage.png";
 
@@ -11,27 +10,16 @@ type Props = {
 const { logoImage = logoSrc, logoText = "Drowr" } = Astro.props;
 ---
 
-<a href="/" class="navbar-brand inline-block w-full">
+<a href="/" class="text-onSurface dark:text-dark-onSurface inline-block w-full">
   <Image
     src={logoImage}
-    class="inline-block"
+    class="inline-block h-15 max-h-full max-w-full"
     width="70"
     height="60"
     alt="Home page"
-    style="height: 60px;"
     loading="eager"
     decoding="async"
     format="webp"
   />
   <span class="headline-small ml-1 align-middle">{logoText}</span>
 </a>
-
-<style>
-  @reference "./styles.css";
-  .navbar-brand {
-    @apply text-onSurface dark:text-dark-onSurface;
-    image {
-      @apply max-h-full max-w-full;
-    }
-  }
-</style>
