Add a navigation bar for lg

--- a/apps/frontend/src/blocks/home/NewsLetterHashnode.astro
+++ b/apps/frontend/src/blocks/home/NewsLetterHashnode.astro
@@ -16,7 +16,8 @@ import { ButtonFilled, TextFieldFilled } from "@drowr/licid";
 
   <form id="subscribe" method="POST" class="mx-auto max-w-xl">
     <div class="relative">
-      <div class="flex flex-col gap-4 sm:flex-row">
+      <!-- TODO: add flex-col -->
+      <div class="flex gap-4 md:flex-row">
         <div class="grow content-center">
           <label for="email" class="sr-only">Email address</label>
           <TextFieldFilled
