--- a/packages/licid/src/blocks/markdown/code.astro
+++ b/packages/licid/src/blocks/markdown/code.astro
@@ -34,7 +34,7 @@
     blockquote {
       @apply border-primary my-2 rounded border-l-4 px-4 py-2;
       p {
-        @apply body-small;
+        @apply font-plain text-[12pt] leading-[16pt] font-normal tracking-[0.1pt] not-italic font-stretch-normal;
       }
     }
   }
