--- a/packages/licid/src/components/header/ThemeSwitcher.astro
+++ b/packages/licid/src/components/header/ThemeSwitcher.astro
@@ -14,7 +14,7 @@ import ButtonIcon from "../button/IconStandard.astro";
   </ButtonIcon>
 </div>
 
-<script async defer>
+<script>
   if (document.documentElement.classList.contains("mode-auto")) {
     const applyTheme = () => {
       if (
