Tailwind with Turbo

--- a/apps/frontend/src/layouts/Layout.astro
+++ b/apps/frontend/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import { join } from "node:path";
+import '@drowr/licid/styles.css'
 import '@/styles.css'
 import { AstroFont } from "astro-font";
 import { ClientRouter } from "astro:transitions";
